--- a/abccaretreatmenteffects_report_main.tex
+++ b/abccaretreatmenteffects_report_main.tex
@@ -39,26 +39,26 @@ The University of Chicago}
 
 \section{Introduction}
 
-Citing evidence that early-childhood education reduces socio-economic inequality, public funding of early learning programs has been on the rise in recent years. Thirty-two states increased spending on early childcare for the 2015-2016 year, with an overall state-spending increase of 12 percent [citation pending], and the federal budget proposal for 2017 includes an approximately \$300 million increase in spending on early childhood education [citation pending]. With sizable and consistent increases in funding, determining the effectiveness of early childhood interventions is critical. An understanding of the specific mechanisms by which early childhood interventions impact later-life outcomes informs how new resources should be allocated to effectively reduce socio-economic inequality early in life. However, the current evidence base is limited and often employs methodologies that fail to identify appropriate measures of effectiveness with the power to answer policy-relevant questions. This paper addresses both of these issues by developing various tools for rigorously measuring the widespread and long-term effects of two early childhood interventions. 
+Citing evidence that early-childhood education reduces socio-economic inequality, public funding of early learning programs has been on the rise in recent years. Thirty-two states increased spending on early childcare for the 2015-2016 year, with an overall state-spending increase of 12 percent [citation pending]. The federal budget proposal for 2017 includes an approximately \$300 million increase in spending on early childhood education which is estimated to expand access to high quality childcare to 1 million infants, toddlers, and three-year-olds by 2026  [citation pending]. With sizable and consistent increases in funding, determining the effectiveness of early childhood interventions is critical. An understanding of the specific mechanisms by which early childhood interventions impact later-life outcomes informs how new resources should be allocated to effectively reduce socio-economic inequality early in life. However, the current evidence base is limited and often employs methodologies that fail to identify appropriate measures of effectiveness that can answer policy-relevant questions. 
 
-The case for the economic efficiency of early childhood education in the US is largely based on evidence from the Perry Preschool Program (Perry). Analyzing Perry has clarified that early childhood education has significant positive effects on short and long-term socio-economic outcomes, even when accounting for compromised randomization, small sample size, and multiple hypothesis testing \citep{Heckman_Moon_etal_2010_QE}. In addition to boosting socio-economic outcomes, the research demonstrates that early childhood education can have an annual rate of return ranging from 7 to 10 percent.\footnote{If one dollar were to be invested at age 4, and then reinvested yearly and compounded over a life-time, the investment would accrue 60 to 300 dollars by age 65, accounting for all the program's costs and the social burden a government would cause by raising taxes to finance it \citep{Heckman_Moon_etal_2010_RateofReturn}} Finally, findings from the program suggest that gains in socio-emotional skills, rather than cognitive skills, mediate reductions in criminal behavior and increased employment and labor income in adults\citep{Heckman_Pinto_etal_2013_PerryFactor}.
+The case for the economic efficiency of early childhood education in the US is largely based on evidence from the Perry Preschool Program (Perry). Analyzing Perry has clarified that early childhood education has significant positive effects on short and long-term socio-economic outcomes, even when accounting for compromised randomization, small sample size, and multiple hypothesis testing \citep{Heckman_Moon_etal_2010_QE}. In addition to boosting socio-economic outcomes, early childhood education can have an annual rate of return ranging from 7 to 10 percent.\footnote{If one dollar were to be invested at age 4, and then reinvested yearly and compounded over a life-time, the investment would accrue 60 to 300 dollars by age 65, accounting for all the program's costs and the social burden a government would cause by raising taxes to finance it \citep{Heckman_Moon_etal_2010_RateofReturn}} Finally, findings from the program suggest that gains in socio-emotional skills, rather than cognitive skills, mediate reductions in criminal behavior and increased employment and labor income in adults\citep{Heckman_Pinto_etal_2013_PerryFactor}.
 
-However, equally comprehensive and methodologically rigorous evidence on the efficiency and effectiveness of other early childhood interventions is scarce. Most of the recent research has one of the following flaws: (i) focus on a limited set of outcomes that fail to measure the widespread and lifelong impact that a program can have;\footnote{An extreme example is the evaluation of preschool programs using an age-eligibility cutoff, in which children who were just eligible are compared to children who were just ineligible given their birth dates, to assess the gain from an additional year of preschool. This approach is not comprehensive because it evaluates an arbitrary set of children with a very narrow set of tests. Examples of these studies include: \citep{Gormley_Gayer_2005_JHR,Gormley_Gayer_etal_2005_DP,Weiland_2013_CD_Impacts-of-Pre-K}.} (ii) failure to account for non-compliance to treatment and treatment substitution when evaluating a randomized-controlled trial;\footnote{A relevant example is the evaluation of Head Start through its randomized controlled trial, the Head Start Impact Study \citep{Puma_Bell_etal_2010_HeadStartImpact}. A substantial proportion of children randomized out of the program were enrolled in preschool alternatives, including other Head Start centers. Thus, a raw comparison between the treatment and the control groups children does not inform on either the efficiency or the effectiveness of Head Start and usually yields relatively low gains. Studies providing a methodology to account for treatment substitution find that Head Start has substantial effects, although they focus on a single, short-term outcome \citep{Kline-Walters_2015_NBER-Evaluating,Feller_Grindal_etal_2016_ComparedtoWhat}.}(iii) evaluation of a randomized controlled trial with a flawed design.\footnote{An evaluation of Tennessee Voluntary Prekindergarten is an emblematic example of this \citep{Lipsey_et_al_2013_Tennessee_Kindergrtn_PRI,Lipsey_et_al_2015_Randomized_Control_Trial_PRI}. The researchers designed a randomized controlled trial to evaluate the program, but they requested permission to assess the children after the randomization protocol. Thus, they only have information available on children whose parents agreed for them to be evaluated \textit{post}-randomization, inducing a potential imbalance between the children randomized into and out of the program that the evaluation does not account for that. Furthermore, the results presented are on a narrow set of short-term outcomes.} 
+However, equally comprehensive and methodologically rigorous evidence on the efficiency and effectiveness of other early childhood interventions is scarce. Most of the recent research has one of the following flaws: (i) focus on a limited set of outcomes that fail to measure the widespread and lifelong impact that a program can have;\footnote{An extreme example is the evaluation of preschool programs using an age-eligibility cutoff, in which children who were just eligible are compared to children who were just ineligible given their birth dates, to assess the gain from an additional year of preschool. This approach is not comprehensive because it evaluates an arbitrary set of children with a very narrow set of tests. Examples of these studies include: \citep{Gormley_Gayer_2005_JHR,Gormley_Gayer_etal_2005_DP,Weiland_2013_CD_Impacts-of-Pre-K}.} (ii) failure to account for non-compliance to treatment and treatment substitution when evaluating a randomized-controlled trial;\footnote{A relevant example is the evaluation of Head Start through its randomized controlled trial, the Head Start Impact Study \citep{Puma_Bell_etal_2010_HeadStartImpact}. A substantial proportion of children randomized out of the program were enrolled in preschool alternatives, including other Head Start centers. Thus, a raw comparison between the treatment and the control group children does not inform on neither the efficiency nor the effectiveness of Head Start and usually yields relatively low gains. Studies providing a methodology to account for treatment substitution find that Head Start has substantial effects, although they focus on a single, short-term outcome \citep{Kline-Walters_2015_NBER-Evaluating,Feller_Grindal_etal_2016_ComparedtoWhat}.}(iii) evaluation of a randomized controlled trial with a flawed design.\footnote{An evaluation of Tennessee Voluntary Prekindergarten is an emblematic example of this \citep{Lipsey_et_al_2013_Tennessee_Kindergrtn_PRI,Lipsey_et_al_2015_Randomized_Control_Trial_PRI}. The researchers designed a randomized controlled trial to evaluate the program, but they requested permission to assess the children after the randomization protocol. Thus, they only have information available on children whose parents agreed for them to be evaluated \textit{post}-randomization, inducing a potential imbalance between the children randomized into and out of the program that the evaluation does not account for that. Furthermore, the results presented are on a narrow set of short-term outcomes.} 
 
-This paper expands the limited evidence base for the economic case for early childhood education and presents results that can answer policy-relevant questions through a rigorous evaluation of two closely related randomized controlled trials, the Carolina Abecedarian Project (ABC) and the Caroline Approach to Responsive Education (CARE).
+This paper expands the limited evidence for the economic case for early childhood education and presents results that can answer policy-relevant questions through a rigorous evaluation of two closely related randomized controlled trials, the Carolina Abecedarian Project (ABC) and the Caroline Approach to Responsive Education (CARE).
 
-ABC and CARE were early-childhood education programs conducted in the early 1970s and late 1980s that targeted economically disadvantaged individuals. Both programs used a randomized-controlled trial design to assign participants to control or treatment. Treatment in ABC consisted of high-quality center-based childcare. Treatment in CARE consisted of two groups –-- the first receiving high-quality center-based childcare and the second receiving this and home visits designed to foster a strong, positive relationship between the participant children and their parents. Both programs also had a second phase of treatment from ages 5 to 8 consisting solely of home visits. The design of the programs allows for the evaluation of the relative effectiveness of different forms of intervention, as well as the effectiveness of intervening at different stages in childhood.  
+ABC and CARE were early-childhood education programs conducted in the early 1970s and late 1980s that targeted economically disadvantaged individuals. Both programs used a randomized-controlled trial design to assign participants to control or treatment. Treatment in ABC consisted of high-quality center-based childcare. The treatment group in CARE was divided in two –-- the first received high-quality center-based childcare and the second received high-quality center-based childcare and home visits designed to foster a strong, positive relationship between the participant children and their parents. Both programs also had a second phase of treatment from ages 5 to 8 consisting solely of home visits. The design of the programs allows for the evaluation of the relative effectiveness of different forms of intervention, as well as the effectiveness of intervening at different stages in childhood.  
 
-Like any social experiment, both programs had methodological complications. However, we construct a methodology to correct for these complications in our evaluation.\footnote{Another common critique of programs like ABC and CARE, which we do not address here, is their small sample size. Asymptotic inference methods, however, are well suited to analyze samples of this size \citep{Hanushek_Lindseth_2009_BOOKSchoolhousesCourthouses}. \citet{Campbell_Conti_etal_2014_EarlyChildhoodInvestments} evaluate the effectiveness of ABC at boosting results both using small sample size inference and an asymptotic procedure without finding little sensitivity if at all.} Our methodology accounts for cases of non-compliance to treatment, for which analysis of ABC has been criticized \citep{Hu_2014_ABC-Study}.
-We also develop a methodology that addresses treatment substitution,\footnote{In both programs, the parents of about 70\% of the children randomized out of center-based childcare enrolled their children in relatively high-quality preschool alternatives.} enabling us to quantify the effect of ABC and CARE relative to a fixed alternative, such as a lower quality preschool or no preschool at all, rather than solely relative to the available supply of alternatives. This provides a more accurate measure of the intervention itself, rather than the intervention relative to another program.
+Like any social experiment, both programs had methodological complications. However, we construct a methodology to correct for these complications in our evaluation.\footnote{Another common critique of programs like ABC and CARE, which we do not address here, is their small sample size. Asymptotic inference methods, however, are well suited to analyze samples of this size \citep{Hanushek_Lindseth_2009_BOOKSchoolhousesCourthouses}. \citet{Campbell_Conti_etal_2014_EarlyChildhoodInvestments} evaluate the effectiveness of ABC at boosting results using small sample size inference and an asymptotic procedure without finding little sensitivity, if any at all.} Our methodology accounts for cases of non-compliance to treatment, for which analysis of ABC has been criticized \citep{Hu_2014_ABC-Study}.
+We also develop a methodology that addresses treatment substitution,\footnote{In both programs, the parents of about 70\% of the children randomized out of center-based childcare enrolled their children in relatively high-quality preschool alternatives.} enabling us to quantify the effect of ABC and CARE relative to a fixed alternative, such as a lower quality preschool or no preschool at all, rather than solely relative to the available supply of alternatives. This provides a more accurate measure of the impact of the intervention itself, rather than the intervention relative to another program.
 
-Finally, we develop a methodology for measuring the effects on multiple outcomes throughout the lifetime. \textbf{[Is this necessary for the intro?]}In the literature, this is accomplished by either (i) calculating the internal rate-of-return or benefit-to-cost ratio \citep{Heckman_Moon_etal_2010_RateofReturn}  or (ii) grouping outcomes into categories –-- e.g. cognition, criminal activity, health –-- and adjusting the inference on each of the outcomes to account for multiple hypothesis testing and avoid ``cherry picking" significant results \citep{Lehman_Romano_2005_AnnStat,Lehmann_Romano_2005_testing,Heckman_Moon_etal_2010_QE}. Alternatively, we propose a method of calculating and formalizing an inference procedure for determining both the number of outcomes for which the program had a positive treatment effect and the number of outcomes for which the program had  a positive and significant treatment effect at various significant levels.\footnote{This alternative is an application of inference on an statistic summarizing multiple sources of information, i.e. a combining function \citep{Pesarin_Salmaso_2010_PermutationTests}.}
+Finally, we develop a methodology for measuring the effects on multiple outcomes throughout the lifetime. \textbf{[Is the following necessary for the intro?]}In the literature, this is accomplished by either (i) calculating the internal rate-of-return or benefit-to-cost ratio \citep{Heckman_Moon_etal_2010_RateofReturn}  or (ii) grouping outcomes into categories –-- e.g. cognition, criminal activity, health –-- and adjusting the inference on each of the outcomes to account for multiple hypothesis testing and avoid ``cherry picking" significant results \citep{Lehman_Romano_2005_AnnStat,Lehmann_Romano_2005_testing,Heckman_Moon_etal_2010_QE}. Alternatively, we propose a method of calculating and formalizing an inference procedure for determining both the number of outcomes for which the program had a positive treatment effect and the number of outcomes for which the program had a positive and \textit{significant} treatment effect at various significant levels.\footnote{This alternative is an application of inference on an statistic summarizing multiple sources of information, i.e. a combining function \citep{Pesarin_Salmaso_2010_PermutationTests}.}
 
 Using these tools, this paper presents evidence for the following: (i) for ABC, there are significant, positive treatment effects on a range of outcomes, with the number of significant effects increasing when the control sample is restricted to children who did not substitute for treatment; (ii) for CARE, center-based childcare and home visits were significantly more effective than only home visits, supporting the results from ABC; (iii) for both programs, there is no significant effect of the second phase of treatment, suggesting that intervention is more effective earlier in life rather than later \textbf{[Is this really true? Couldn’t this be because the second phase was home visits, and it's just that home visits are not effective?]} \\
 
 \noindent This paper continues the work of \citet{Campbell_Conti_etal_2014_EarlyChildhoodInvestments}, who analyze the effectiveness of ABC at boosting long-term health outcomes. It also provides the methodology and the treatment effect estimates that feed into our companion paper, \citet{Elango_et_al_2015_ABC_unpublished}, in which we use the treatment effects presented in this paper to forecast the life-cycle gains of ABC participants in multiple dimensions of human development throughout their entire lifetimes in order to calculate the program's internal rate of return and benefit-to-cost ratio.\\
 
-\noindent The rest of the paper proceeds as follows. Section~\ref{section:background} describes the background of both programs. Section~\ref{section:methodology} formalizes our methodology. Section~\ref{section:results} presents our main results and Section~\ref{section:conclusion} offers some final comments. An extensive Appendix presents additional information on the program and data used relative to what we present here. It also discusses various alternative methodologies to evaluate the programs and documents the results we present more extensively. 
+\noindent The rest of the paper proceeds as follows. Section~\ref{section:background} describes the background of both programs. Section~\ref{section:methodology} formalizes our methodology. Section~\ref{section:results} presents our main results and Section~\ref{section:conclusion} offers some final comments. An extensive appendix presents additional information on the program and data used relative to what we present here. It also discusses various alternative methodologies to evaluate the programs and documents the results we present more extensively. 
 
 \section{Background} \label{section:background}
 \subsection{Overview}
